# Maxwell

./: ._main.cu  ._params.yaml  ._run.sh  .gitignore  CMakeLists.txt  LICENSE  README.md  animate.py  baseline.cu  baseline_benchmark.cu  baseline_single_kernel.cu  baseline_single_kernel.hh  constants.hpp  display.cpp  display.hpp  fdtd_benchmark.cu  gpu_utils.h  main.cu  main.h  main_correct.cu  main_correct.h  main_optimized.cu  main_wave.cu  maxwells.cu  maxwells.cuh  maxwells.h  params.yaml  run.sh  run_benchmark.sh  two-gpu.cu  viz.ipynb  waves.cu  waves.cuh
